feat: Changed page responsiveness using media

--- a/style.css
+++ b/style.css
@@ -150,3 +150,22 @@ body{
 .section-border{
   border-radius: 1rem;
 }
+@media (max-width: 600px) {
+  body {
+    max-width: 95%;
+    width: 100%;
+  }
+
+  .list-item-inline {
+    display: inline;
+    padding: 0rem;
+  }
+
+  .container-center {
+    width: auto;
+  }
+
+  .link-primary {
+    display: block;
+  }
+}
